# QSSTV

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  clang-tidy-report.md  commit_msg.txt  qsstv.pro  replace_casts_conservative.py  replace_casts_identifiers.py  replace_casts_safe.py  run-clang-tidy.sh  run_clang_tidy.sh
src/: CMakeLists.txt  ElegantDark.qss  Info.plist.in  appdefs.h  appglobal.cpp  appglobal.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qsstv.entitlements  qsstv.icns  qsstv.pro  qsstv.qrc  src.pro
src/config/: baseconfig.cpp  baseconfig.h  configdialog.cpp  configdialog.h  configparams.h  cwconfig.cpp  cwconfig.h  directoriesconfig.cpp  directoriesconfig.h  drmprofileconfig.cpp  drmprofileconfig.h  frequencyselectwidget.cpp  frequencyselectwidget.h  ftpconfig.cpp  ftpconfig.h  guiconfig.cpp  guiconfig.h  hybridconfig.cpp  hybridconfig.h  operatorconfig.cpp  operatorconfig.h  repeaterconfig.cpp  repeaterconfig.h  rigconfig.cpp  rigconfig.h  rigconfig.ui  soundconfig.cpp  soundconfig.h  soundconfig.ui  waterfallconfig.cpp  waterfallconfig.h
src/dispatch/: dispatcher.cpp  dispatcher.h  dispatchevents.h
src/drmrx/: bits2bytes.cpp  channeldecode.cpp  crc16_bytewise.cpp  crc8_c.cpp  deinterleaver.cpp  demodulator.cpp  demodulator.h  drm.cpp  drm.h  drmconstellationframe.cpp  drmconstellationframe.h  drmdefs.h  drmproto.h  drmpsdframe.cpp  drmpsdframe.h  drmrx.cpp  drmrx.h  drmstatusframe.cpp  drmstatusframe.h  filter1.cpp  filter1c.cpp  fixform.cpp  fixform.h  getfoffsint.cpp  getmode.cpp  getofdm.cpp  getofdmsync.cpp  getsymbolidx.cpp  lubksb.cpp  ludcmp.cpp  mkfacmap.cpp  mkmap.h  mkmscmap.cpp  msd_hard.h  msd_hard_sdc.h  msdhardfac.cpp  msdhardmsc.cpp  newfft.cpp  nrutil.cpp  nrutil.h  (+8 more)
src/drmtx/: bsrform.cpp  bsrform.h  config.h  drmparams.cpp  drmparams.h  drmtransmitter.cpp  drmtransmitter.h  drmtx.cpp  drmtx.h
src/drmtx/common/: CDrmTransmitter.cpp  CDrmTransmitter.h  DRMSignalIO.cpp  DRMSignalIO.h  DataIO.cpp  DataIO.h  GlobalDefinitions.h  OFDM.cpp  OFDM.h  Parameter.cpp  Parameter.h  csoundout.cpp  csoundout.h  soundinterface.h
src/drmtx/common/FAC/: FAC.cpp  FAC.h
src/drmtx/common/SDC/: SDC.h  SDCTransmit.cpp
src/drmtx/common/datadecoding/: DABMOT.cpp  DABMOT.h  DataDecoder.cpp  DataDecoder.h  MOTSlideShow.cpp  MOTSlideShow.h
src/drmtx/common/interleaver/: BlockInterleaver.cpp  BlockInterleaver.h  SymbolInterleaver.cpp  SymbolInterleaver.h
src/drmtx/common/matlib/: Matlib.h  MatlibSigProToolbox.cpp  MatlibSigProToolbox.h  MatlibStdToolbox.cpp  MatlibStdToolbox.h
src/drmtx/common/mlc/: BitInterleaver.cpp  BitInterleaver.h  ChannelCode.cpp  ChannelCode.h  ConvEncoder.cpp  ConvEncoder.h  EnergyDispersal.cpp  EnergyDispersal.h  MLC.cpp  MLC.h  QAMMapping.cpp  QAMMapping.h
src/drmtx/common/ofdmcellmapping/: CellMappingTable.cpp  CellMappingTable.h  OFDMCellMapping.cpp  OFDMCellMapping.h
src/drmtx/common/sourcedecoders/: AudioSourceDecoder.cpp  AudioSourceDecoder.h
src/drmtx/common/tables/: .!50901!TableFAC.cpp  (+8 more)
src/dsp/: downsamplefilter.cpp  downsamplefilter.h  filter.cpp  filter.h  filterparam.cpp  filterparam.h  filters.cpp  filters.h  nco.h  synthes.cpp  synthes.h
src/editor/: basegraphicitem.cpp  basegraphicitem.h  canvassizeform.cpp  canvassizeform.h  editor.cpp  editor.h  editorscene.cpp  editorscene.h  editorview.cpp  editorview.h  gradientdialog.cpp  gradientdialog.h  graphicitems.cpp  graphicitems.h  templateviewer.cpp  templateviewer.h
src/logbook/: logbook.cpp  logbook.h
src/macos/: CaptureDeviceAuthorization.h  CaptureDeviceAuthorization.m  soundmacos.cpp  soundmacos.h
src/mainwidgets/: gallerywidget.cpp  gallerywidget.h  rxfunctions.cpp  rxfunctions.h  rxwidget.cpp  rxwidget.h  txfunctions.cpp  txfunctions.h  txwidget.cpp  txwidget.h  txwidget.ui
src/rig/: freqdisplay.cpp  freqdisplay.h  rigcontrol.cpp  rigcontrol.h
src/scope/: scopeoffset.cpp  scopeoffset.h  scopeplot.cpp  scopeplot.h  scopeview.cpp  scopeview.h
src/sound/: calibration.cpp  calibration.h  resamplefilter.cpp  resamplefilter.h  soundalsa.cpp  soundalsa.h  soundbase.cpp  soundbase.h  soundpulse.cpp  soundpulse.h  waterfalltext.cpp  waterfalltext.h  wavio.cpp  wavio.h
src/sstv/: cw.cpp  cw.h  sstvparam.cpp  sstvparam.h  sstvrx.cpp  sstvrx.h  sstvtx.cpp  sstvtx.h  syncprocessor.cpp  syncprocessor.h  visfskid.cpp  visfskid.h
src/sstv/modes/: modeavt.cpp  modeavt.h  modebase.cpp  modebase.h  modebw.cpp  modebw.h  modegbr.cpp  modegbr.h  modegbr2.cpp  modegbr2.h  modepd.cpp  modepd.h  modergb.cpp  modergb.h  moderobot1.cpp  moderobot1.h  moderobot2.cpp  moderobot2.h
src/utils/: arraydumper.cpp  arraydumper.h  buffermanag.h  color.cpp  color.h  dirdialog.cpp  dirdialog.h  fftcalc.cpp  fftcalc.h  filewatcher.cpp  filewatcher.h  ftpevents.h  ftpfunctions.cpp  ftpfunctions.h  ftpthread.cpp  ftpthread.h  hexconvertor.cpp  hexconvertor.h  hybridcrypt.cpp  hybridcrypt.h  jp2io.cpp  jp2io.h  logging.cpp  logging.h  loggingparams.cpp  loggingparams.h  macroexpansion.cpp  macroexpansion.h  qftp.cpp  qftp.h  qurlinfo.cpp  qurlinfo.h  reedsolomoncoder.cpp  reedsolomoncoder.h  rs.cpp  rs.h  supportfunctions.cpp  supportfunctions.h  vector.h
src/videocapt/: cameradialog.cpp  cameradialog.h  imagesettings.cpp  imagesettings.h  v4l2control.cpp  v4l2control.h  videocapture.cpp  videocapture.h
src/widgets/: drmsegmentsview.cpp  drmsegmentsview.h  extviewer.cpp  extviewer.h  fftdisplay.cpp  fftdisplay.h  imagematrix.cpp  imagematrix.h  imageviewer.cpp  imageviewer.h  markerwidget.cpp  markerwidget.h  spectrumwidget.cpp  spectrumwidget.h  testpatternselection.cpp  testpatternselection.h  textdisplay.cpp  textdisplay.h  vumeter.cpp  vumeter.h  waterfallform.cpp  waterfallform.h  xyzplaintextedit.cpp  xyzplaintextedit.h
src/xmlrpc/: ipcmessage.cpp  ipcmessage.h  maiaFault.cpp  maiaFault.h  maiaObject.cpp  maiaObject.h  maiaXmlRpcClient.cpp  maiaXmlRpcClient.h  maiaXmlRpcServer.cpp  maiaXmlRpcServer.h  maiaXmlRpcServerConnection.cpp  maiaXmlRpcServerConnection.h  xmlinterface.cpp  xmlinterface.h
(+25 files in other folders)
